# Data-Epic-Project

./: .coverage  README.md  gspread_code.py  pyproject.toml  requirements.txt  untitled_requests.py
.github/workflows/: main.yml
project-1/: requirements.txt
