[tool.poetry]
name = "data-epic-project"
version = "0.1.0"
description = ""
authors = ["Humphery_Ufuoma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium="4.14.0"
gspread="5.11.3"
pandas="1.4.2"
python-dotenv="*"
webdriver-manager="4.0.1" 

[tool.poetry.dev-dependencies]
pytest="7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
